# test-cuda

./: .clang-format  main  main_rdc
cuda-api-wrappers/: CMakeLists.txt  vectorAdd.cu
cuda-api-wrappers-multi-example/: CMakeLists.txt  main.cpp  vectorAdd.cu  vectorAdd.h
saxpi/: Makefile  main.cu
